tt2/gen/com/perl5/lang/tt2/parser/TemplateToolkitParserGenerated.java
// This is a generated file. Not intended for manual editing.
package com.perl5.lang.tt2.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.perl5.lang.tt2.lexer.TemplateToolkitElementTypesGenerated.*;
import static com.perl5.lang.tt2.parser.TemplateToolkitParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class TemplateToolkitParserGenerated implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, EXTENDS_SETS_);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return root(builder_, level_ + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ADD_EXPR, AND_EXPR, ARRAY_EXPR, ASSIGN_EXPR,
      CALL_EXPR, COMPARE_EXPR, DQ_STRING_EXPR, EQUAL_EXPR,
      EXPR, FILTER_ELEMENT_EXPR, HASH_EXPR, IDENTIFIER_EXPR,
      MUL_EXPR, OR_EXPR, PAIR_EXPR, PARENTHESISED_EXPR,
      RANGE_EXPR, SQ_STRING_EXPR, TERM_EXPR, TERNAR_EXPR,
      UNARY_EXPR, VARIABLE_EXPR),
  };

  /* ********************************************************** */
  // anon_block_directive element * end_directive
  public static boolean anon_block(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anon_block")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANON_BLOCK, "<anon block>");
    result_ = anon_block_directive(builder_, level_ + 1);
    result_ = result_ && anon_block_1(builder_, level_ + 1);
    result_ = result_ && end_directive(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // element *
  private static boolean anon_block_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anon_block_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!element(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "anon_block_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // identifier_expr TT2_ASSIGN !TT2_CLOSE_TAG TT2_BLOCK
  public static boolean anon_block_directive(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anon_block_directive")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANON_BLOCK_DIRECTIVE, "<anon block directive>");
    result_ = identifier_expr(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, TT2_ASSIGN);
    result_ = result_ && anon_block_directive_2(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, TT2_BLOCK);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // !TT2_CLOSE_TAG
  private static boolean anon_block_directive_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anon_block_directive_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !consumeToken(builder_, TT2_CLOSE_TAG);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // TT2_LEFT_BRACKET array_expr_content TT2_RIGHT_BRACKET
  public static boolean array_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_expr")) return false;
    if (!nextTokenIs(builder_, TT2_LEFT_BRACKET)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARRAY_EXPR, null);
    result_ = consumeToken(builder_, TT2_LEFT_BRACKET);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, array_expr_content(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, TT2_RIGHT_BRACKET) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // (expr [TT2_COMMA]) *
  static boolean array_expr_content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_expr_content")) return false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    while (true) {
      int pos_ = current_position_(builder_);
      if (!array_expr_content_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "array_expr_content", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, true, false, TemplateToolkitParserGenerated::recover_array_content);
    return true;
  }

  // expr [TT2_COMMA]
  private static boolean array_expr_content_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_expr_content_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = expr(builder_, level_ + 1, -1);
    result_ = result_ && array_expr_content_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // [TT2_COMMA]
  private static boolean array_expr_content_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_expr_content_0_1")) return false;
    consumeToken(builder_, TT2_COMMA);
    return true;
  }

  /* ********************************************************** */
  // filter_directive |
  // 	wrapper_directive |
  // 	debug_directive |
  // 	next_directive |
  // 	last_directive |
  // 	return_directive |
  // 	stop_directive |
  // 	clear_directive |
  // 	default_directive |
  // 	insert_directive |
  // 	include_directive |
  // 	process_directive |
  // 	call_directive |
  // 	throw_directive |
  // 	set_directive |
  // 	get_directive
  static boolean atom_dirictive(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "atom_dirictive")) return false;
    boolean result_;
    result_ = filter_directive(builder_, level_ + 1);
    if (!result_) result_ = wrapper_directive(builder_, level_ + 1);
    if (!result_) result_ = debug_directive(builder_, level_ + 1);
    if (!result_) result_ = next_directive(builder_, level_ + 1);
    if (!result_) result_ = last_directive(builder_, level_ + 1);
    if (!result_) result_ = return_directive(builder_, level_ + 1);
    if (!result_) result_ = stop_directive(builder_, level_ + 1);
    if (!result_) result_ = clear_directive(builder_, level_ + 1);
    if (!result_) result_ = default_directive(builder_, level_ + 1);
    if (!result_) result_ = insert_directive(builder_, level_ + 1);
    if (!result_) result_ = include_directive(builder_, level_ + 1);
    if (!result_) result_ = process_directive(builder_, level_ + 1);
    if (!result_) result_ = call_directive(builder_, level_ + 1);
    if (!result_) result_ = throw_directive(builder_, level_ + 1);
    if (!result_) result_ = set_directive(builder_, level_ + 1);
    if (!result_) result_ = get_directive(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // expr
  public static boolean block_comment(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_comment")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BLOCK_COMMENT, "<block comment>");
    result_ = expr(builder_, level_ + 1, -1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // TT2_BLOCK block_name
  public static boolean block_directive(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_directive")) return false;
    if (!nextTokenIs(builder_, TT2_BLOCK)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BLOCK_DIRECTIVE, null);
    result_ = consumeToken(builder_, TT2_BLOCK);
    pinned_ = result_; // pin = 1
    result_ = result_ && block_name(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // if_directive |
  // 	unless_directive |
  // 	foreach_directive |
  // 	while_directive |
  // 	perl_directive |
  // 	rawperl_directive |
  // 	anon_block_directive |
  // 	try_directive
  static boolean block_directives(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_directives")) return false;
    boolean result_;
    result_ = if_directive(builder_, level_ + 1);
    if (!result_) result_ = unless_directive(builder_, level_ + 1);
    if (!result_) result_ = foreach_directive(builder_, level_ + 1);
    if (!result_) result_ = while_directive(builder_, level_ + 1);
    if (!result_) result_ = perl_directive(builder_, level_ + 1);
    if (!result_) result_ = rawperl_directive(builder_, level_ + 1);
    if (!result_) result_ = anon_block_directive(builder_, level_ + 1);
    if (!result_) result_ = try_directive(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // keyword_or_identifier_term
  public static boolean block_name(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_name")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BLOCK_NAME, "<block name>");
    result_ = keyword_or_identifier_term(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // call_arguments_
  public static boolean call_arguments(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_arguments")) return false;
    if (!nextTokenIs(builder_, TT2_LEFT_PAREN)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = call_arguments_(builder_, level_ + 1);
    exit_section_(builder_, marker_, CALL_ARGUMENTS, result_);
    return result_;
  }

  /* ********************************************************** */
  // TT2_LEFT_PAREN call_arguments_content ? TT2_RIGHT_PAREN
  static boolean call_arguments_(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_arguments_")) return false;
    if (!nextTokenIs(builder_, TT2_LEFT_PAREN)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = consumeToken(builder_, TT2_LEFT_PAREN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, call_arguments__1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, TT2_RIGHT_PAREN) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // call_arguments_content ?
  private static boolean call_arguments__1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_arguments__1")) return false;
    call_arguments_content(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // call_arguments_item (TT2_COMMA call_arguments_item)*
  static boolean call_arguments_content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_arguments_content")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = call_arguments_item(builder_, level_ + 1);
    result_ = result_ && call_arguments_content_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, TemplateToolkitParserGenerated::recover_parenthesised_item);
    return result_;
  }

  // (TT2_COMMA call_arguments_item)*
  private static boolean call_arguments_content_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_arguments_content_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!call_arguments_content_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "call_arguments_content_1", pos_)) break;
    }
    return true;
  }

  // TT2_COMMA call_arguments_item
  private static boolean call_arguments_content_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_arguments_content_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, TT2_COMMA);
    result_ = result_ && call_arguments_item(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // pair_expr | expr
  static boolean call_arguments_item(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_arguments_item")) return false;
    boolean result_;
    result_ = pair_expr(builder_, level_ + 1);
    if (!result_) result_ = expr(builder_, level_ + 1, -1);
    return result_;
  }

  /* ********************************************************** */
  // TT2_CALL expr [directive_postfix]
  public static boolean call_directive(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_directive")) return false;
    if (!nextTokenIs(builder_, TT2_CALL)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CALL_DIRECTIVE, null);
    result_ = consumeToken(builder_, TT2_CALL);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, expr(builder_, level_ + 1, -1));
    result_ = pinned_ && call_directive_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // [directive_postfix]
  private static boolean call_directive_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_directive_2")) return false;
    directive_postfix(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // keyword_or_identifier_term call_arguments
  public static boolean call_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_expr")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CALL_EXPR, "<call expr>");
    result_ = keyword_or_identifier_term(builder_, level_ + 1);
    result_ = result_ && call_arguments(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // case_directive element *
  public static boolean case_block(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "case_block")) return false;
    if (!nextTokenIs(builder_, TT2_CASE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = case_directive(builder_, level_ + 1);
    result_ = result_ && case_block_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, CASE_BLOCK, result_);
    return result_;
  }

  // element *
  private static boolean case_block_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "case_block_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!element(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "case_block_1", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // TT2_CASE [TT2_DEFAULT|expr]
  public static boolean case_directive(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "case_directive")) return false;
    if (!nextTokenIs(builder_, TT2_CASE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CASE_DIRECTIVE, null);
    result_ = consumeToken(builder_, TT2_CASE);
    pinned_ = result_; // pin = 1
    result_ = result_ && case_directive_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }
